2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_circuit.[ch]: Some preliminary support for specifying wide
	  circuit metrics. Needs more thinking though, but should do for now.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isisd.[ch]: Introduce oldmetric flag for area and transition
	  metricstyle command. With metricstyle wide only extended TLVs
	  should be used.

2005-09-25 Hasso Tepper <hasso at quagga.net>

	* dict.[ch]: Revert all nonfunctional changes. It's external module
	  imported from kazlib and it's better not to screw it - there is
	  theoretical chance that we might want to merge changes from upstream
	  at some point. Also avoid the loss of info about upstream version
	  (rcsid).

2005-09-21 Hasso Tepper <hasso at quagga.net>

	* isis_route.c: Fix output of nexthops in case of extreme debug.

2005-09-19 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c, isis_pdu.c, isis_spf.c: Remove some old unused code.

2005-09-19 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Better output of detailed LSP printout and fixed TE IPv4
	  reachibility metric display.

2005-09-19 Hasso Tepper <hasso at quagga.net>

	* isis_tlv.h: Cleanup comment about TLVs we should support, remove info
	  about useless (in sense of IP(v6)) TLVs.

2005-09-19 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.h: Added backpointer to the area from LSP. For now it's used
	  only in generated topology LSPs.
	* isisd.[ch]: Cleanup CLI commands related to topology generation and
	  added command to specify base fo dynamic hostname for topology LSPs.
	* isis_lsp.c: Rewrite almost all code related to generation topology
	  LSPs (top_lsp_refresh(), generate_topology_lsps() and
	  build_topology_lsp_data() functions). Topology is connected to own
	  LSP now (lsp_build_nonpseudo). Commented out lsppdu_realloc
	  functions, it's not used any more hopefully.

2005-09-18 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c (lsp_update): Fix previous commit - manipulate the right